[package]
name = "coderec"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = "~4.4"
itertools = "0.13.0"
log = "0.4.19"
memmap = "0.7.0"
plotters = "0.3.7"
rayon = "1.10.0"
rust-embed = { version = "8.5.0", features = ["debug-embed"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
simple_logger = "4.1.0"

[dev-dependencies]
assert_approx_eq = "1.1.0"
rand = "0.8.5"
